tests/baselines/reference/sourceMapValidationDestructuringForOfArrayBindingPattern2(target=es2015).errors.txt
sourceMapValidationDestructuringForOfArrayBindingPattern2.ts(26,19): error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPattern2.ts(29,19): error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPattern2.ts(32,19): error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPattern2.ts(35,46): error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPattern2.ts(38,46): error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPattern2.ts(41,46): error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPattern2.ts(45,19): error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPattern2.ts(48,19): error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPattern2.ts(51,19): error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPattern2.ts(54,17): error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPattern2.ts(57,17): error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPattern2.ts(60,17): error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPattern2.ts(64,37): error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPattern2.ts(67,37): error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPattern2.ts(70,37): error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPattern2.ts(73,52): error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPattern2.ts(76,52): error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPattern2.ts(79,52): error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPattern2.ts(83,35): error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPattern2.ts(86,35): error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPattern2.ts(89,35): error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPattern2.ts(92,30): error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPattern2.ts(95,30): error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPattern2.ts(98,30): error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.


==== sourceMapValidationDestructuringForOfArrayBindingPattern2.ts (24 errors) ====
    declare var console: {
        log(msg: any): void;
    }
    type Robot = [number, string, string];
    type MultiSkilledRobot = [string, [string, string]];
    
    let robotA: Robot = [1, "mower", "mowing"];
    let robotB: Robot = [2, "trimmer", "trimming"];
    let robots = [robotA, robotB];
    function getRobots() {
        return robots;
    }
    
    let multiRobotA: MultiSkilledRobot = ["mower", ["mowing", ""]];
    let multiRobotB: MultiSkilledRobot = ["trimmer", ["trimming", "edging"]];
    let multiRobots = [multiRobotA, multiRobotB];
    function getMultiRobots() {
        return multiRobots;
    }
    
    let nameA: string, primarySkillA: string, secondarySkillA: string;
    let numberB: number, nameB: string;
    let numberA2: number, nameA2: string, skillA2: string, nameMA: string;
    let numberA3: number, robotAInfo: (number | string)[], multiRobotAInfo: (string | [string, string])[];
    
    for ([, nameA] of robots) {
                      ~~~~~~
!!! error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameA);
    }
    for ([, nameA] of getRobots()) {
                      ~~~~~~~~~~~
!!! error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameA);
    }
    for ([, nameA] of [robotA, robotB]) {
                      ~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameA);
    }
    for ([, [primarySkillA, secondarySkillA]] of multiRobots) {
                                                 ~~~~~~~~~~~
!!! error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(primarySkillA);
    }
    for ([, [primarySkillA, secondarySkillA]] of getMultiRobots()) {
                                                 ~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(primarySkillA);
    }
    for ([, [primarySkillA, secondarySkillA]] of [multiRobotA, multiRobotB]) {
                                                 ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(primarySkillA);
    }
    
    for ([numberB] of robots) {
                      ~~~~~~
!!! error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(numberB);
    }
    for ([numberB] of getRobots()) {
                      ~~~~~~~~~~~
!!! error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(numberB);
    }
    for ([numberB] of [robotA, robotB]) {
                      ~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(numberB);
    }
    for ([nameB] of multiRobots) {
                    ~~~~~~~~~~~
!!! error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameB);
    }
    for ([nameB] of getMultiRobots()) {
                    ~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameB);
    }
    for ([nameB] of [multiRobotA, multiRobotB]) {
                    ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameB);
    }
    
    for ([numberA2, nameA2, skillA2] of robots) {
                                        ~~~~~~
!!! error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameA2);
    }
    for ([numberA2, nameA2, skillA2] of getRobots()) {
                                        ~~~~~~~~~~~
!!! error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameA2);
    }
    for ([numberA2, nameA2, skillA2] of [robotA, robotB]) {
                                        ~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameA2);
    }
    for ([nameMA, [primarySkillA, secondarySkillA]] of multiRobots) {
                                                       ~~~~~~~~~~~
!!! error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameMA);
    }
    for ([nameMA, [primarySkillA, secondarySkillA]] of getMultiRobots()) {
                                                       ~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameMA);
    }
    for ([nameMA, [primarySkillA, secondarySkillA]] of [multiRobotA, multiRobotB]) {
                                                       ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameMA);
    }
    
    for ([numberA3, ...robotAInfo] of robots) {
                                      ~~~~~~
!!! error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(numberA3);
    }
    for ([numberA3, ...robotAInfo] of getRobots()) {
                                      ~~~~~~~~~~~
!!! error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(numberA3);
    }
    for ([numberA3, ...robotAInfo] of [robotA, robotB]) {
                                      ~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(numberA3);
    }
    for ([...multiRobotAInfo] of multiRobots) {
                                 ~~~~~~~~~~~
!!! error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(multiRobotAInfo);
    }
    for ([...multiRobotAInfo] of getMultiRobots()) {
                                 ~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(multiRobotAInfo);
    }
    for ([...multiRobotAInfo] of [multiRobotA, multiRobotB]) {
                                 ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(multiRobotAInfo);
    }